--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <button id="close">Close</button>
-    <script>
-        const btn = document.getElementById("close");
-        btn.addEventListener('click', ()=>{
-            window.electronAPI.closeRequest();
-        });
-        const stream1 = await navigator.mediaDevices.getUserMedia({
-            video: {
-              mandatory: {
-                chromeMediaSource: 'desktop',
-                maxFrameRate: 3
-              }
-            },
-            audio: false
-          });
+  <button id="close">Close</button>
 
-        
-    </script>
+  <script type="module">
+    const btn = document.getElementById("close");
+    btn.addEventListener('click', () => {
+      window.electronAPI.closeRequest();
+    });
+
+    async function startCapture() {
+      try {
+        // In Electron, use desktopCapturer to get screen stream
+        const stream1 = await navigator.mediaDevices.getUserMedia({
+          video: true,
+          audio: false
+        });
+
+        console.log("Stream started:", stream1);
+      } catch (err) {
+        console.error("Error capturing screen:", err);
+      }
+    }
+
+    startCapture();
+  </script>
 </body>
 </html>
